--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta name="author" content="Kilian Chamiot-Maitral">
+    <meta name="description" content="Site officiel de l'association BattleDrive Competition. Objectif Rallye des Bauges 2020">
+    <meta name="keywords" content="battledrive, rallye, bauges, competition, association, battle, drive">
     <title>BattleDrive Competition</title>
   </head>
   <body>
